samples/_failures_safe/1761075576_73577e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dedd49e.c: In function ‘main’:
./samples/SAFE/__tmp_0dedd49e.c:184:9: error: expected expression at end of input
  184 |         if (
      |         ^~
./samples/SAFE/__tmp_0dedd49e.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dedd49e.c:184:9: error: expected declaration or statement at end of input
